# faker-api-study-case

./: Dockerfile  README.md  faker_api_workflow.py  pyproject.toml  requirements.txt  taxfix-challenge.db
airflow/dags/: testtask.py
airflow/dags/faker/extract/: requestAPI.py
airflow/dags/faker/transform/: datamask.py
airflow/yaml/: pv.yaml  pvc.yaml  requirements.txt  values.yaml  variables.yaml
docs/source/: conf.py  index.rst
faker/ingest/: pandas.py
faker/load/: ingestion.py
faker/request/: pandas.py
faker/transform/: date.py  rename.py
powerbi/: report.pbix
tests/: test_request_pandas.py
