[tool.poetry]
name = "faker"
version = "0.1.0"
description = ""
authors = ["Marlon Saura Félix Rozindo <marlon.saura@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
Sphinx = "^4.5.0"
sphinxcontrib-confluencebuilder = "^1.8.0"
autodocsumm = "^0.2.8"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
